# siamize

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Doxyfile  Makefile  README.md  RELEASE-v0.2.0.md
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.dockerignore  dockerhub-overview.md
matlab/: README.md  siamize.m  siamize_mex.cpp
matlab/tests/: run_tests.m
mex/: README.md  siamize.m  siamize_mex.cpp
py/: README.md  siam_ref.py
scripts/: fetch_deps.ps1  fetch_deps.sh  fetch_mnn.sh  fetch_weights.sh  glibcxx_compat.h  package.sh  patch_n3d_for_small_patch.py
src/: engine.h  engine_mnn.cpp  engine_ort.cpp  jnifti_io.cpp  jnifti_io.h  main.cpp  nifti_io.cpp  nifti_io.h  orient.cpp  orient.h  preprocess.cpp  preprocess.h  siam.h  siam_log.cpp  siam_log.h  siamize.cpp  siamize_mex.cpp  sliding.cpp  sliding.h  weights.cpp  weights.h
src/zmat/: zmat.h
tests/: README.md  run_regression.sh
tools/mnn_probe/: 01_convert.sh  02_op_histogram.py  02_op_histogram.sh  03_cpu_parity.py  04_opencl_parity.py  05_e2e_perf.py  README.md  REPORT_TEMPLATE.md  run_all.sh
tools/mnn_probe/patches/: README.md  mnn-int64-fixes-for-siam.patch
tools/onnx_export/: README.md  compare.py  export.py  export_all_folds.sh  rewrite_for_coreml.py  siam_ort.py
